[package]
name = "hypowertools"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.1"
resvg = "0.45.0"
usvg = "0.45.0"
tiny-skia = "0.11.4"
